Removed the deprecated  methods